EXLM-4137 Card grid on localized Playlists page causes layout issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -543,6 +543,9 @@ strong:not(a strong) {
 :lang(ja),
 :lang(ko) {
   font-synthesis: weight small-caps;
+}
+
+:lang(ko) {
   word-break: keep-all;
 }
 
